examples/test/testpolicy7823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7823
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key34: value15
      key5: value43
      key35: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value43
          key9: value30
      podSelector:
        matchLabels:
          key32: value44
